--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 
 .idea/
-github-scheldejonas-cphbuscossem3-ca2-project-gruppe6.iml
-<<<<<<< HEAD
+
 /target/
-=======
+
 
 target/
->>>>>>> c860aed1b52cf5e7166f570483e9a1d6ae886feb
+
 yellowpages.iml
+/src/main/main.iml
