--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>info.schelde</groupId>
-    <artifactId>yellowpages</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>yellowpage</artifactId>
+    <version>s</version>
 
     <packaging>war</packaging>
 
